# searu

./: .gitignore  Cargo.nix  Cargo.toml  Vagrantfile  crate-hashes.json  default.nix.b  flake.nix  result  result-lib
.github/workflows/: rust-lint.yaml
.vagrant/bundler/: global.sol
.vagrant/machines/default/libvirt/: vagrant_cwd
searu-dash/: package-lock.json  package.json
searu-dash/src/: app.html
searu-dash/src/hooks/: index.ts
searu-dash/src/lib/: SideBarButton.svelte  api.ts
searu-dash/src/routes/: __layout.svelte  login.svelte
searu-dash/src/routes/users/: login.ts  logout.ts
searu-node/: Cargo.toml  config.toml  test.conf
searu-node/src/: auth.rs  config.rs  main.rs  storage.rs  vmm.rs
searu-node/src/actors/: dhcp.rs  mod.rs  node_info.rs  scheduler.rs  vm_supervisor.rs  vpc_supervisor.rs  watcher.rs
searu-node/src/api/: mod.rs  nodes.rs  projects.rs  users.rs  vms.rs  vpcs.rs
searu-node/src/types/: auth.rs  mod.rs
