[package]
name = "searu-node"
version = "0.1.0"
authors = ["Sascha Wise <me@saschawise.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bcrypt = "0.9"
chrono = "0.4"
config = { version = "0.11", default-features = false, features = ["toml"] }
etcd-client = "0.6"
futures = "0.3"
ipnet = { version = "2", features = ["serde"] }
jsonwebtoken = "=7.2"
hyper = "0.14"
hyperlocal = "0.8"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9"
rand = "0.8"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "3a7559edcec7c443e68e22e038aaa2d90ef27c23"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "3a7559edcec7c443e68e22e038aaa2d90ef27c23"}
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }


# These are based off of the CLI dependencies for `cloud-hypervisor`
hypervisor = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor.git", rev = "30a01277655bf943a5ccdab67d9d398b0335d669" }
libc = "0.2.94"
seccomp = { git = "https://github.com/firecracker-microvm/firecracker", tag = "v0.24.2" }
vmm = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor.git", rev = "30a01277655bf943a5ccdab67d9d398b0335d669", features = ["acpi", "io_uring", "kvm"]}
vmm-sys-util = "0.8.0"


